# baker

./: .gitignore  .pre-commit-config.yaml  .release-plz.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  dist-workspace.toml  release-plz.toml  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/prompts/: commit.prompt.md
.github/workflows/: build.yml  changelog.yaml  dependency-update.yml  release-plz.yml  release-pr.yaml.yml  release.yml
a/: baker.yaml
baker-cli/: Cargo.toml
baker-cli/src/: answers.rs  args.rs  main.rs  processor.rs  runner.rs
baker-cli/tests/: gitea_integration_tests.rs  readme_examples_integration_tests.rs  utils.rs
baker-cli/tests/expected/builtin_filters/: output.md
baker-cli/tests/expected/conditional_questions_python/: README.md
baker-cli/tests/expected/custom_hooks/: hook_executed.txt
baker-cli/tests/expected/demo/: CONTRIBUTING.md
baker-cli/tests/expected/demo_tests_false/: README.md
baker-cli/tests/expected/hook_runner_unix/: README.md  post-hook.txt
baker-cli/tests/expected/loop/: item1.md
baker-cli/tests/expected/multiple_choice/: README.md
baker-cli/tests/expected/platform_variables/: platform_info.md
baker-cli/tests/expected/templated_filenames/: my_awesome_project.md
baker-cli/tests/expected/templated_filenames/my_awesome_project_project/: MyAwesomeProject.js
baker-cli/tests/expected/validation/: info.md
baker-cli/tests/expected/yaml_type/: config.md
baker-cli/tests/templates/conditional_questions/: README.md.baker.j2  baker.yaml
baker-cli/tests/templates/custom_hooks/: README.md.baker.j2  baker.yaml
baker-cli/tests/templates/empty_template_suffix/: baker.yaml
baker-cli/tests/templates/hook_runner_unix/: README.md.baker.j2
baker-cli/tests/templates/hook_runner_windows/hooks/: post.ps1  pre.ps1
baker-cli/tests/templates/jsonschema/: baker.yaml
baker-cli/tests/templates/jsonschema_file/: .bakerignore  baker.yaml  config.toml.baker.j2
baker-cli/tests/templates/single_choice/: README.md.baker.j2
baker-cli/tests/templates/symlinks/subdir/: inner.txt
baker-cli/tests/templates/symlinks_follow/: baker.yaml
baker-cli/tests/templates/templated_filenames/{% if use_database %}database{% endif %}/: config.md.baker.j2
baker-cli/tests/templates/windows_yaml_placeholder/: baker.yaml
baker-cli/tests/templates/wrong_template_suffix/: baker.yaml
baker-cli/tests/templates/yaml_type/: baker.yaml  config.md.baker.j2
benches/: generation.rs  rendering.rs
crates/baker-cli/: Cargo.toml
crates/baker-cli/src/: answers.rs  args.rs  lib.rs  main.rs  processor.rs  runner.rs  store.rs
crates/baker-cli/src/mcp/: handler.rs  mod.rs  server.rs  tools.rs
crates/baker-cli/tests/: gitea_integration_tests.rs  loader_integration_tests.rs  mcp_integration_tests.rs  readme_examples_integration_tests.rs  utils.rs
crates/baker-cli/tests/expected/filters/: README.md
crates/baker-cli/tests/expected/hook_runner_windows/: README.md  post-hook.txt  pre-hook.txt
crates/baker-cli/tests/expected/jsonschema_file/: config.toml
crates/baker-cli/tests/expected/single_choice/: README.md
crates/baker-cli/tests/expected/symlinks_follow_dir/helm/: chart.yaml  web.yaml
crates/baker-cli/tests/templates/different_template_suffix/: baker.yaml
crates/baker-cli/tests/templates/hook_runner_windows/: README.md.baker.j2
crates/baker-cli/tests/templates/multiple_choice/: baker.yaml
crates/baker-cli/tests/templates/platform_variables/: baker.yaml  platform_info.md.baker.j2
crates/baker-cli/tests/templates/symlinks_follow_dir/: .bakerignore
crates/baker-cli/tests/templates/symlinks_follow_dir/actual_dir/: {%for service in services%}{{ service.name }}.yaml.baker.j2{%endfor%}
crates/baker-cli/tests/templates/templated_filenames/: baker.yaml  {{project_slug}}.md.baker.j2
crates/baker-cli/tests/templates/validation/: baker.yaml
crates/baker-core/: Cargo.toml
crates/baker-core/src/: constants.rs  hooks.rs  ignore.rs
crates/baker-web/: Cargo.toml  Dioxus.toml  README.md  index.html
crates/baker-web/assets/: style.css
crates/baker-web/src/: app.rs  config.rs  github.rs  lib.rs  main.rs  models.rs  renderer.rs  templates.rs  zip.rs
crates/baker-web/src/components/: form_panel.rs  mod.rs  preview_panel.rs  template_panel.rs  topbar.rs
docs/: architecture.md
examples/build_rs/: Cargo.toml  README.md  build.rs
examples/demo/: README.md  README.md.baker.j2  baker.yaml
examples/filters/: README.md.baker.j2  baker.yaml
examples/heavy_loop/: baker.yaml
examples/hooks/: .bakerignore  baker.yaml
examples/import/: .bakerignore  Readme.md.baker.j2  baker.yaml  commons.tpl  macros.jinja
examples/import_directory/: baker.yaml  example.txt.baker.j2
examples/import_root/: .bakerignore  README.md  README.md.baker.j2  baker.yaml
examples/loop/: baker.yaml  {%for item in items%}{{ item.name }}.md.baker.j2{%endfor%}
src/: cli.rs  config.rs  conflict.rs  constants.rs  context.rs  dialoguer.rs  error.rs  generated.rs  hooks.rs  ignore.rs  import.rs  ioutils.rs  lib.rs  loader.rs  main.rs  metadata.rs  renderer.rs  types.rs  validation.rs
src/cli/: answers.rs  args.rs  context.rs  hooks.rs  metadata.rs  mod.rs  processor.rs  runner.rs  update.rs
src/config/: loader.rs  mod.rs  question.rs  tests.rs  types.rs
src/dialoguer/: choice.rs  confirmation.rs  mod.rs  structured.rs  text.rs
src/ext/: path.rs
src/loader/: git.rs  interface.rs  local.rs  mod.rs
src/prompt/: adapter.rs  automatic_impl.rs  choice.rs  context.rs  dialoguer.rs  handler.rs  mod.rs  provider.rs  structured.rs  test_examples.rs  text.rs
src/renderer/: filters.rs  interface.rs  minijinja.rs
src/template/: mod.rs  operation.rs  processor.rs
tests/: gitea_integration_tests.rs  loader_integration_tests.rs  prompt_integration_test.rs  readme_examples_integration_tests.rs  renderer_tests.rs  update_integration_tests.rs  utils.rs
tests/expected/heavy_loop/: README.md  pyproject.toml
(+123 files in other folders)
