[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.14.1"
edition = "2021"
authors = ["Ali Aliyev <ali@aliev.me>"]
repository = "https://github.com/aliev/baker"
homepage = "https://github.com/aliev/baker"
license = "MIT"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
