[package]
name = "baker"
version = "0.14.4"
edition = "2021"
authors = ["Ali Aliyev <ali@aliev.me>"]
repository = "https://github.com/aliev/baker"
homepage = "https://github.com/aliev/baker"
categories = ["command-line-utilities"]
description = "baker: project scaffolding tool"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
serde_json = "1.0"
indexmap = { version = "2.12", features = ["serde"] }
minijinja = { version = "2.14", features = [
    "builtins",
    "loop_controls",
    "loader",
    "json",
    "urlencode",
] }
globset = "0.4"
walkdir = "2.5"
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
url = "2.5"
jsonschema = "0.42"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
anyhow = { version = "1.0" }
openssl = { version = "0.10", features = ["vendored"] }
libz-sys = { version = "1.1", features = ["static"] }
regex = "1.12"
cruet = "0.15"

[dev-dependencies]
dir-diff = "0.3"
tempfile = "3.20"
test-log = { version = "0.2", features = ["trace", "color"] }
testcontainers = { version = "0.27", features = ["blocking"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
codegen-units = 1
lto = true
strip = true
debug = false
panic = "abort"
