[package]
name = "baker-cli"
version = "0.13.2"
edition = "2021"
authors = ["Ali Aliyev <ali@aliev.me>"]
repository = "https://github.com/aliev/baker"
homepage = "https://github.com/aliev/baker"
categories = ["command-line-utilities"]
description = "baker: project scaffolding tool"
license = "MIT"

[[bin]]
name = "baker"
path = "src/main.rs"

[dependencies]
baker = { path = ".." }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
globset = "0.4"
walkdir = "2.5"
anyhow = "1.0"
indexmap = { version = "2.10", features = ["serde"] }
jsonschema = "0.37"

[dev-dependencies]
dir-diff = "0.3"
tempfile = "3.20"
test-log = { version = "0.2", features = ["trace", "color"] }
testcontainers = { version = "0.26", features = ["blocking"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
