[package]
name = "baker-web"
version = "0.1.0"
edition = "2021"
authors = ["Ali Aliyev <ali@aliev.me>"]
description = "Baker – in-browser project generator (Dioxus / WASM)"
license = "MIT"

[[bin]]
name = "baker-web"
path = "src/main.rs"

[lib]
name = "baker_web"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }

# Baker template engine (WASM-safe subset — no git2/openssl/dialoguer)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2.12", features = ["serde"] }
minijinja = { version = "2.14", features = [
    "builtins",
    "loop_controls",
    "loader",
    "json",
    "urlencode",
] }
cruet = "0.15"

# Browser / WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "Node",
] }

# HTTP (browser-native fetch)
gloo-net = { version = "0.6", features = ["http"] }

# ZIP generation (pure Rust – works in WASM)
zip = { version = "2", default-features = false, features = ["deflate"] }

# Async / logging
futures-util = { version = "0.3", default-features = false }
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
